fix(NavbarComponent) fix bootstrap collapsing behavior, remove padding from collapse container, add independent wrapping element

--- a/projects/rlb/ng-bootstrap/src/assets/scss/rlb/app-layout.scss
+++ b/projects/rlb/ng-bootstrap/src/assets/scss/rlb/app-layout.scss
@@ -41,7 +41,6 @@
 
   .navbar-collapse {
     background-color: $header-dark-bg;
-    padding: 1rem;
     border-top: 1px solid rgba(0, 0, 0, .1);
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, .15);
   }
